# RBF-formuladobolso

./: .gitignore  .railwayignore  ADMIN_SETUP.md  DEPLOY_FIX_SUMMARY.md  Makefile  README-DEPLOY.md  README.md  TESTE_LOCAL.md  build-push-dockerhub.ps1  check-api-logs.ps1  deploy-aws.ps1  deploy-build-push.ps1  deploy-completo.ps1  deploy-dockerhub.ps1  deploy-server.ps1  deploy.txt  docker-compose.prod.yml  docker-compose.yml  install_node.sh  railway.json  run-migration.ps1  run-migrations.ps1  setup-oracle-instance.sh  start-system.sh
back/: Procfile  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt
back/alembic/: env.py
back/alembic/versions/: 001_initial_migration.py  002_add_workspaces.py  003_add_filters_transfers_calendar.py  004_add_system_logs.py  005_add_family_permissions.py  005_add_password_reset_fields.py  006_add_family_invites.py  007_add_theme_preference.py  53007e212d56_add_budget_group_to_categories.py  642b80338653_change_event_type_to_string.py  8564cb8a52c6_add_savings_category_to_goals.py  c0aaa1242d8c_add_scheduled_transactions.py  d39fbfdeb1dc_add_calendar_events.py  f48e0aa6068b_add_performance_indexes.py
back/docker/: Dockerfile
back/scripts/: apply_migration.py  create_database.sql  create_env.sh  init_db.py  setup_database.sh
back/src/application/auth/: auth_service.py  jwt_service.py
back/src/shared/: config.py  exceptions.py  utils.py
back/test/: README.md  conftest.py  test_accounts.py  test_auth.py  test_transactions.py  test_users.py
docs/: AWS_SETUP.md  (+50 more)
(+264 files in other folders)
