[tool.poetry]
name = "formulado-bolso"
version = "0.1.0"
description = "Sistema de gerenciamento financeiro pessoal e familiar"
authors = ["Raphael Faquim"]
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

